--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
   },
   "dependencies": {
     "expo": "~50.0.0-alpha.0",
-    "expo-status-bar": "~1.7.0",
+    "expo-image": "~1.10.6",
+    "expo-status-bar": "~1.11.1",
+    "fix": "^0.0.6",
     "react": "18.2.0",
-    "react-native": "0.72.3",
-    "react-native-modal": "^13.0.1",
-    "expo-image": "~1.10.6"
+    "react-native": "0.73.6",
+    "react-native-modal": "^13.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
